ingress/eaas-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-eaas
  namespace: eaas-k
  annotations:
    app.kubernetes.io/name: eaas
    app.kubernetes.io/instance: eaas-template-k
    app.kubernetes.io/version: 0.0.1
    app.kubernetes.io/component: encryption
    app.kubernnetes.io/part-of: eaas-k
    app.kubernetes.io/managed-by: manifest
    app.kubernetes.io/created-by: jpegleg
spec:
  rules:
  - host: "TEMPLATE"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: eaas-k
            port: 
              number: 443
...
