ingress/mihno-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mihno
  namespace: eaas-k
  annotations:
    app.kubernetes.io/name: mihno
    app.kubernetes.io/instance: eaas-template-k
    app.kubernetes.io/version: 0.0.1
    app.kubernetes.io/component: honeypot
    app.kubernnetes.io/part-of: eaas-k
    app.kubernetes.io/managed-by: manifest
    app.kubernetes.io/created-by: jpegleg
spec:
  rules:
  - host: "TEMPLATE"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mihno-k
            port: 
              number: 80
...
